[package]
name = "surge-stream"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
fast_paths = "1"
serde-pickle = "1"
fastrand = "2"
toml = "0.8"
#galileo = { version = "0.1", features = ["wgpu", "serde", "winit", "geojson"]}
galileo = { git = "https://github.com/Maximkaaa/galileo", features = ["wgpu", "serde", "winit", "geojson"]}
galileo-types = { git = "https://github.com/Maximkaaa/galileo" }
galileo-egui = { git = "https://github.com/Maximkaaa/galileo" }

tokio = { version = "1", features = ["full"] }


